<resources>
    <string name="app_name">智慧井盖</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_init_dev">InitDevActivity</string>
    <string name="login">登录</string>
    <string name="pwd">密码</string>
    <string name="desc" />
    <string name="company">北京思必拓科技股份有限公司</string>
    <string name="username">用户名</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_pwd">请输入密码</string>
    <array name="jinggai_type">
        <item>污水</item>
        <item>雨水</item>
        <item>电力</item>
        <item>供暖</item>
    </array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_malfunction_detial">MalfunctionDetialActivity</string>
</resources>
