<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.speedata.welllid.LoginActivity">


    <!--<include-->
        <!--layout="@layout/view_title_bar_layout"/>-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/login_img"/>

    <include
        layout="@layout/view_login_input_username_layout"/>


    <include
        layout="@layout/view_login_input_pwd_layout"/>

    <Button
        android:id="@+id/btn_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/dp260"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp35"
        android:layout_marginRight="@dimen/dp35"
        android:layout_marginTop="@dimen/dp10"
        android:background="@drawable/bg_click"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp18"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="200dp"
        android:text="@string/company"/>

</LinearLayout>
